docs: updates readme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Chart.js</title>
 	</head>
 	<body>
-		<div style="width: 500px">
+		<div style="min-width: 400px">
 			<canvas id="data"></canvas>
 		</div>
 
